Drop the in-image isolate check; keep its version test
`JsIsolateCheck`, its CI step and the README recipe checked the image's staged
GraalJS library. A wrong one does not break charts: `engineOrInHeap` falls
back to the interpreter and logs `no GraalJS isolate`, so the check guarded a
slowdown at the cost of a main in the shipped jar and an image step.

The part the fallback cannot see is kept as `JsIsolateSuite`: an isolate
library of a different version than the polyglot jars runs silently
(issue report 3), so the test compares them.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01AazYERkS8ftTQEYXJV3UVB