@@ -24,19 +24,5 @@ Datastar dashboard (`fh-datastar-view`): dashboards authored in
   `/data/graal-cache` the first time an engine is built (161 MB, once per
   GraalVM version); `backup_exclude` keeps that out of HA backups.
 
-Is the isolate healthy in the built image?
-
-```sh
-docker run --rm --entrypoint java ghcr.io/perok/fh-dashboard:latest \
-  --enable-native-access=ALL-UNNAMED \
-  -Dpolyglot.engine.userResourceCache=/tmp/graal-cache \
-  -cp /opt/fh-dashboard.jar:/opt/fh/js-isolate.jar \
-  fh.view.runtime.JsIsolateCheck
-```
-
-It runs a line of JavaScript, draws a chart with its timings, and prints RSS
-before and after, which is the
-only way to see memory a foreign library allocates outside the JVM heap. CI
-runs it inside the built image — amd64 on a pull request, aarch64 under
-emulation on main. (A throwaway cache path here so the check does not warm
-the real one; `run.sh` uses `$FH_GRAAL_CACHE`.)
+If the isolate cannot start, charts are drawn interpreted instead (the same
+SVG, slower) and the log says so with a `no GraalJS isolate` warning.
